--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,19 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
 }
+
+
+h1{font-size: clamp( 1.7rem, 3.8vw + 1em, 4vh); color:#30ae69;text-transform: uppercase;}
+h3{font-size:clamp( 1rem, 1vw +1em , 1vh + 1em);}
+h4{font-size:clamp( 1rem, 2vw + 1em, 3vh)}
+p, a{font-size: clamp( .7rem, 1vw + 1em,.8rem);}
+
+
 
 body{font-size: 100%;}
 header{
@@ -26,7 +37,7 @@ header ul li {
 header ul li a{
      text-decoration: none;
      color: white;
-     font-size: 1em;
+     font-size: clamp( .7rem, 1vw + 1em,.8rem);
  }
 header ul li:first-child a,header ul li a:hover{
     color: white;
@@ -37,50 +48,64 @@ header ul li:first-child a,header ul li a:hover{
     width: 50vw;
 }
 
+
+.slider, .slider-p7{width: 100%;display: block;margin: 1em auto;}
+.slideshow img, .slideshow-7 img{width: 100%;height: 100vh;display: block;margin: 0 auto;}
+.slick-prev:before,
+.slick-next:before{color: #30ae69;}
+
+
 /*
 color:#30ae69
 */
-.pag-slide{
-    width: 50vw;
-    display: block;
-    margin: 20px auto;
-}
+
 
 .p1 h1{
     text-align: center;
     padding: 50px 0;
+    text-transform: uppercase;
 }
 .p1-box{
     display: grid;
-    grid-template-columns: 20% 20% 20% 20%;
+    grid-template-columns: 30% 30% 30%;
     justify-content: center;
-    grid-gap: 20PX;
+    grid-gap: 1em;
+
 }
 .p-item{
-    box-shadow: 0 0 10px gray;
+    border:.1em solid #fff;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
+    padding: .5em;
+    height: 100%;
+    text-align: center;
 }
+.p-item:hover{border:.1em solid #30ae69;border-radius: .7em;}
 .p-item img{
     display: block;
     margin: 0 auto;
-    width: 20vw;
-    height: 30vh;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
+    width: 100%;
+    height: 40vh;
+    border-radius: .5em;
 }
 
 .p-item h3{
-    text-align: center;
-    margin: 10vh 0;
+    text-align: left;
+    margin: 1em 0 .5em;
+    font-weight: 400;
 }
+.p-item p{color: #848484;font-size: .7rem;margin-bottom: 1em;text-align: left;}
 
-.button-1{background-color:#30ae69;color:#30ae69;text-align: center;
-    font-size: 1em;cursor: pointer; text-transform: uppercase;
-    border: 1px solid #ffffff ;display: flex;
-    align-items: center;justify-content: center;padding: 1em .5em;margin: 1em;}
+.button-1{background-color:#30ae69;text-align: center;
+    cursor: pointer; text-transform: uppercase;border: .2em solid #ffffff ;display: flex;align-items: center;justify-content: center;padding: .5em;border-radius: 5em;}
  .button-1 a{ color:#ffffff;text-decoration: none;font-weight: 700;}
  .button-1 a:hover{color: #ffffff;text-decoration: none;}
+.ver{background-color:transparent;color:#30ae69;text-decoration: none;font-weight: 700;padding: .5em;border-radius: 5em;
+    text-align: center;display: block;text-transform: uppercase;border: .2em solid #30ae69}
+.ver:hover{background-color:#30ae69;color:#fff;}    
+
+
+
 
  .p-item button.transf, .p2-item button.transf{
     background-color: #30ae69;
@@ -99,9 +124,10 @@ color:#30ae69
 
 }
 
+.p2{padding: 2em 1em;}
 .p2 h1{
     text-align: center;
-    padding: 50px 0;
+    margin: 1em 0;
 }
 .p2-box{
     display: grid;
@@ -119,39 +145,58 @@ color:#30ae69
 }
 .p2-item h3{
     text-align: center;
-    margin: 30px 0;
+    margin: .5em 0;
+    font-weight: 500;
 }
 
+.p3{padding:2em 1em ;}
 .p3 h1{
     text-align: center;
-    padding: 50px 0;
+    padding: 0 0 1em;
 }
 .p3-box{
     display: grid;
     grid-template-columns: 20% 20% 20% 20%;
     justify-content: center;
-    grid-gap: 20PX;
+    grid-gap: 1em;
 }
 
 .p3-item img{
     display: block;
     margin: 0 auto;
     padding-top: 20px;
+    width: 40%;height: auto;
 }
 .p3-item h3{
     text-align: center;
-    margin: 30px 0;
+    margin: 1em 0;font-weight: 500;
 }
 
-.p5-box{display: flex;justify-content: center;align-items: center;flex-direction: column;background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/images/family-1.jpeg) ;background-size: cover;height: 80vh;}
-.p5-box h1{ color: #ffffff;font-size: 3em;font-weight: 800;}
-.button{background-color:#30ae69;color:#ffffff;text-align: center;width: 30vw;height: 10vh;
-    font-size: 1.2em;cursor: pointer; text-transform: uppercase;
-    border-radius: 8px ;font-weight: 700;display: flex;align-items: center;justify-content: center;margin: 3vh 0;}
- .button a{ color: #ffffff;text-decoration: none;font-weight: 700;font-size: 1.2em;text-decoration: none;}
+.p5-box{display: flex;justify-content: center;align-items: center;flex-direction: column;background-image:linear-gradient(rgba(48, 174, 105, 0.4),RGBA(48, 174, 105, 0.4)), url(/old.jpg) ;background-size: cover;height: 80vh;background-position: center top;background-attachment: fixed;}
+.p5-box h1{ color: #ffffff;font-size: 2em;font-weight: 800;text-transform: uppercase;}
+.button{background-color:transparent;color:#ffffff;text-align: center;padding: .5em 1em;cursor: pointer; text-transform: uppercase;
+    border-radius: 4em ;font-weight: 700;display: flex;align-items: center;justify-content: center;margin: 1em;
+    border: .2em solid #30ae69;}
+ .button a{ color: #ffffff;text-decoration: none;font-weight: 500;font-size: .8em;text-decoration: none;}
+
+.sobrebx, .sobre, .p7{display: flex;justify-content: center;align-items: center;}
+.sobre{padding: 2em 1em;}
+.sobrebx {width: 80%;}
+.sobre-item:nth-child(1){width: 80%;}
+.sobre h1{color:#30ae69;}
+.sobre-item p {margin: 1em 0;}
+.sobre-item img{width: 100%;height: auto;}
+
+.p7{background-color: #e5e5e5;flex-direction: column;padding: 2em 1em;}
+.slider-p7, .slider-p8{width: 90%;}
+.slideshow-7 img{height: auto;padding: 1em;width: 90%;}
+
+
+
 
 .p4{
     background-color: #30ae69;
+    padding: 2em 1em;
 }
 .p4-box{
     display: grid;
@@ -184,6 +229,22 @@ margin: 0 auto;
     flex-direction: column;
     justify-items: flex-start;
 }
+.iframe-container {
+    overflow: hidden;
+    /* 16:9 aspect ratio */
+    padding-bottom: 56.25%;
+    position: relative;
+    width: 100%;
+    height: 0;
+  }
+  
+  .iframe-container iframe {
+     position: absolute;
+     left: 0;
+     top: 0;
+     height: 100%;
+     width: 100%;
+  }
 .whatsapp a img{
     position: fixed;
     top: 81vh;
@@ -211,6 +272,19 @@ footer p a{
 .esp-item h3{color: #ffffff;font-weight: 700;text-transform: initial;font-size: 1rem;display: block;margin: 2vh auto;text-align: center;}
 .esp-item p{font-size: .8rem;color: #ffffff;}
 
+
+.consulta{display: flex;justify-content: center;align-items: center;flex-direction: column;padding: 4em 1em 2em;}
+.consultabx{display: grid;grid-template-columns: 60% 40%;width: 80%;background-color:  #30ae69;color: #fff;padding: 2em;
+    border-radius: .5em;}
+.consulta img{width: 100%;height: auto;}
+.consulta p{margin: 1em 0;}
+.consulta ul{margin: 0 1em;}
+.consulta h1{text-align: left;margin: 1em;}
+.btn-consu{background-color:#ffffff;color:#30ae69;text-decoration: none;font-weight: 700;padding: .5em;border-radius: 5em;
+    text-align: center;display: block;text-transform: uppercase;border: .2em solid #30ae69;margin: 1em 0;}
+
+
+
 @media screen and (max-width:900px){
     .pag-slide{
         width: 100vw;height: auto;
@@ -235,6 +309,9 @@ footer p a{
     }
 
     .p2-item img{width: 80vw;}
+    .sobrebx{flex-direction: column;width: 90%;}
+    .sobre-item:nth-child(1){width: 100%;}
+
     .p5-box h1{text-align: center;}
     .p-item{
         padding: 0;
